# tetris

./: .gitignore  NOTES.md  README.md  env.nix  package.json  webpack.config.js
lib/: Cargo.toml  rust-toolchain.toml
lib/src/: lib.rs
lib/src/tetris/: helpers.rs  mod.rs  piece.rs
src/: App.ts  main.ts  type.ts
src/engine/: EventsManager.ts  Renderer2D.ts  index.ts
static/: index.html
