# cargo-features = ["edition"]

[package]
name = "tetris"
description = ""
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]

[dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
wee_alloc = { version = "0.4.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
wasm-bindgen-futures = "0.3.22"
